--- a/styleTake.css
+++ b/styleTake.css
@@ -1,4 +1,4 @@
-/* Below is an image for the "takeoff.html" page */
+/* Below is a background-image for the "takeoff.html" page */
 body{
     
     background-image: url(img/launch.jpg);
